fix font-sizes and alignments for mobile

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -92,6 +92,11 @@
   }
 
   .about__content p {
+    font-size: 1.2rem;
     margin: 1.5rem 0;
+  }
+
+  .about__content .about__content-body {
+    font-size: 1rem;
   }
 }
